# xianyu-mcp

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/xianyu_mcp/: __init__.py  config.py  constants.py  errors.py  logging.py  server.py
src/xianyu_mcp/infrastructure/: __init__.py
src/xianyu_mcp/infrastructure/api/: __init__.py  xianyu_client.py  xianyu_client_base.py  xianyu_favorite_client.py  xianyu_goods_client.py  xianyu_sale_client.py
src/xianyu_mcp/infrastructure/browser/: __init__.py  browser_manager.py  login_flow.py  page_utils.py  stealth.py
src/xianyu_mcp/infrastructure/storage/: __init__.py  cookie_store.py
src/xianyu_mcp/mcp/: __init__.py  context_features.py
src/xianyu_mcp/mcp/tools/: __init__.py  account_tools.py  ai_tools.py  debug_tools.py  goods_tools.py  sale_tools.py  seller_tools.py
