[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xianyu-mcp"
version = "0.3.0"
description = "MCP service for Xianyu (闲鱼) with Playwright browser automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "xianyu-mcp" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.24.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.4.0",
]

[project.scripts]
xianyu-mcp = "xianyu_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xianyu_mcp"]
